--- a/images.html
+++ b/images.html
@@ -24,9 +24,14 @@ img " >
 <body >
 <h1 > Image Format Demonstration </h1 >
 <h2 > JPEG Image </h2 >
+<h2> SVG Image</h2>
+<p> This is a standard SVG image:</p>
+<img src ="images/example.svg" alt ="Example SVG image" width="500">
 <p > This is a standard JPEG image : </p >
 <img src ="images/example.jpg" alt =" Example JPEG Image " width
 ="500" >
+<h2> This is a GIF</h2>
+<img src = "images/example.gif"alt="Example Gif"width="500">
 <!-- Continue extra codes here -->
 </body >
 </html >
