--- a/news.html
+++ b/news.html
@@ -3,7 +3,7 @@
 Name        : news.html
 Assignment  : Lab 2 Exercise C
 Author(s)   : Mahdi Ansari, William Arthur Philip Louis
-Submission  : May 21, 2030
+Submission  : Jan 24, 2024
 Description : A simple HTML file.
 =========================================================
 -->
@@ -11,7 +11,17 @@ Description : A simple HTML file.
 <html>
 <head>
     <title>Comprehensive HTML Page</title>
-	<!--Copy and paste remaining tags of the head section from images.html file.-->
+	<!--1. Copy and paste remaining tags of the head section from images.html file.-->
+    <title > Image Demonstration </title >
+    <title > Image Demonstration </title >
+    <meta charset =" UTF -8" >
+    <meta name =" description " content =" An HTML example with img tags
+    " >
+    <meta name =" keywords " content =" HTML , Web Development , Example ,
+    img " >
+    <meta name =" author " content =" Your Name " >
+    <link rel =" shortcut icon " href =" favicon . ico " type =" image /x - icon
+    " >
 </head>
 <body>
 
@@ -31,13 +41,12 @@ Description : A simple HTML file.
         <article>
             <h2>Article Title</h2>
 			
-			<p>This is a paragraph in an article section. It demonstrates text formatting, like bold, italic, and marked text.</p>
-			<!-- To emphasize specific words in the paragraph, apply appropriate HTML tags: 
+			<p>This is a paragraph in an article section. It demonstrates text formatting, like <b>bold</b>, <i>italic</i>, and <mark>marked text.</mark></p>
+			<!-- 2. To emphasize specific words in the paragraph, apply appropriate HTML tags: 
 			<strong> or <b> for bold text, 
 			<em> or <i> for italic text, and
 			<mark> for highlighted text. 
 			Ensure each formatting style is correctly demonstrated on the respective words. -->
-
             <p>Here's a quotation:</p>
             <blockquote cite="http://example.com">
                 This is a blockquote, a section that quotes content from another source.
@@ -52,13 +61,23 @@ Description : A simple HTML file.
         <ol>
             <li>First item</li>
             <li>Second item</li>
-			<!--Make a sub-ordered list here-->
+			<!--3. Make a sub-ordered list here-->
+                <ol>
+                    <li>Second-First item</li>
+                    <li>Second-Second item</li>
+                    <li>Second-Third item</li>
+                </ol>
             <li>Third item</li>
         </ol>
         <p>Unordered List:</p>
         <ul>
             <li>Bullet item</li>
-			<!--Make a sub-unordered list here-->
+			<!--4. Make a sub-unordered list here-->
+            <ul>
+                <li>First-Bullet item</li>
+                <li>Second_Another bullet item</li>
+                <li>Third-Yet another bullet item</li>
+            </ul>
             <li>Another bullet item</li>
             <li>Yet another bullet item</li>
         </ul>
@@ -74,7 +93,7 @@ Description : A simple HTML file.
             <dt>HTML</dt>
             <dd>Hypertext Markup Language.</dd>
 			<dt>CSS</dt>
-            <dd><!--Add CSS definition here--></dd>
+            <dd><!--5. Add CSS definition here-->Cascading Style Sheets</dd>
         </dl>
 		
         
@@ -104,21 +123,22 @@ Description : A simple HTML file.
 			<tfoot>
 				<tr>
 					<td>Total</td>
-					<td><!--Put column total here--></td>
-					<td><!--Put column total here--></td>
+					<td><!--6. Put column total here-->$3800</td>
+					<td><!--Put column total here-->$2700</td>
 				</tr>
 			</tfoot>
         </table>
 		
 		<h3>Images:</h3>
         <p>Adding an image:</p>
-        <img src="example.jpg" alt="Example Image"> <!--Fix addressing issue-->
+        <img src="images/example.jpg" alt="Example Image" width="1000"> <!--7. Fix addressing issue-->
     </section>
 
     <footer>
-        <p>Footer content, like contact info or copyrights.</p>
-		<!--Comment out the above p tag and add a new p tag under this comment.
-			The new p tag must contain {Copy right + your names}.-->	
+        <!--Footer content, like contact info or copyrights.-->
+		<!--8. Comment out the above p tag and add a new p tag under this comment.
+			The new p tag must contain {Copy right + your names}.-->
+        <p>Copy right Jin Kim, with Sebastian Nieto.</p>	
     </footer>
 </body>
 </html>
