--- a/images.html
+++ b/images.html
@@ -18,8 +18,7 @@ Description : A simple HTML file .
 <meta name =" keywords " content =" HTML , Web Development , Example ,
 img " >
 <meta name =" author " content =" Your Name " >
-<link rel =" shortcut icon " href =" favicon . ico " type =" image /x - icon
-" >
+<link rel ="icon" href ="favicon.ico" type ="image/x-icon">
 </head >
 <body >
 <h1 > Image Format Demonstration </h1 >
