--- a/images.html
+++ b/images.html
@@ -8,6 +8,7 @@ Description : A simple HTML file .
 =========================================================
 -->
 <!DOCTYPE html >
+<br><a href="index.html">Back to Home</a>
 <html >
 <head >
 <title > Image Demonstration </title >
@@ -35,3 +36,4 @@ img " >
 <!-- Continue extra codes here -->
 </body >
 </html >
+<br><a href="./">Back to Home</a>
