--- a/news.html
+++ b/news.html
@@ -8,6 +8,7 @@ Description : A simple HTML file.
 =========================================================
 -->
 <!DOCTYPE html>
+<br><a href="index.html">Back to Home</a>
 <html>
 <head>
     <title>Comprehensive HTML Page</title>
@@ -142,3 +143,4 @@ Description : A simple HTML file.
     </footer>
 </body>
 </html>
+<br><a href="./">Back to Home</a>
